this commit remaped the record to clas for start information about delete